<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="motorcycle_depot">Motorcycle Depot</string>
    <string name="what_are_you_looking_for">What Are You Looking For?</string>
    <string name="enter_the_make_model_and_year_of_your_chosen_ride">Enter the make, model, and year of your chosen ride!</string>
    <string name="make">Make (Required)</string>
    <string name="model">Model (Optional)</string>
    <string name="year">Year (Optional)</string>
    <string name="search">Search</string>
    <string name="promptUser">Please enter a make</string>
    <string name="enterValidMakeToast">Enter a valid make!</string>
    <string name="about_motorcycle_depot">About Motorcycle Depot</string>
    <string name="this_app_is_meant_to_give_its_users_a_clear_idea_of_what_desired_brand_they_are_seeking_this_gives_motorcycle_enthusiasts_or_anyone_looking_for_some_background_on_their_bike_a_chance_to_learn_more_about_what_makes_their_ride_so_special">This app is meant to give its users a clear idea of what desired brand they are seeking. This gives motorcycle enthusiasts or anyone looking for some background on their bike a chance to learn more about what makes their ride so special.</string>
    <string name="go_back">Go Back</string>
    <string name="how_we_populate_our_app">How we populate our app?</string>
    <string name="questions">Questions?</string>
    <string name="if_you_re_having_trouble_selecting_or_finding_you_re_perferred_motorcycle_make_sure_to_use_proper_capitalization_and_check_for_grammar_errors_enter_the_make_exactly_as_is_for_example_if_you_wanted_harley_davidson_enter_quot_harley_davidson_quot">If you\'re having trouble selecting or finding you\'re perferred motorcycle make sure to use proper capitalization and check for grammar errors. Enter the make exactly as is, for example if you wanted Harley Davidson enter \"Harley-Davidson\"</string>
    <string name="need_more_help">Need more help?</string>
    <string name="type">Type :</string>
    <string name="engine">Engine :</string>
    <string name="years">Year :</string>
    <string name="the_list_of_motorcycle_makes_supported_on_this_app_are">The list of motorcycle makes supported on this app are :</string>
    <string name="harley_davidson_kawasaki_honda_bmw_yamaha_ktm_ducati_aprilia_suzuki_bimota_royal_enfield_indian_alta_energica">Harley-Davidson, Kawasaki, Honda, BMW, Yamaha, KTM, Ducati, Aprilia, Suzuki, Bimota, Royal Enfield, Indian, Alta, Energica</string>
    <string name="note_this_app_is_still_being_developed_and_more_motorcycle_makes_are_still_planning_to_be_added">*Note: This app is still being developed and more motorcycle makes are still planning to be added*</string>
</resources>